# cmake-cxx11

Modules/: CheckCXX11Features.cmake  CheckCXXFeatures.cmake  FindCXXFeatures.cmake
Modules/CheckCXX11Features/: cxx11-test-auto.cpp  cxx11-test-class_override_final.cpp  cxx11-test-cstdint.cpp  cxx11-test-initializer_list.cpp  cxx11-test-sizeof_member.cpp
Tests/Module/CXX11Features/: CMakeLists.txt
Tests/Module/CXXFeatures/: CMakeLists.txt  cxxfeatures.cxx
